--- a/README
+++ b/README
@@ -1,1 +1,25 @@
-Portfolio Site
+##Hello there, friend!
+
+This is my application website for the **Founders and Coders** Programme in London. 
+If you don't know what that is, check out their website [here](https://foundersandcoders.com/)! 
+
+TL;DR; They're an awesome non-profit that gives amazing web development teaching to coding newbies like me (for free!) 
+while helping other charities, non-profits and start-ups with projects.
+
+This is my first, published project on GitHub so _be kind to me please!_
+
+In this project I've used: 
+* HTML (_obvs_)
+* Pure CSS, including Flexbox (and floats, because I'm old school _read: I haven't mastered grid layout._)
+* A tiny dusting of JavaScript
+
+If you want to see more JavaScript from me, check out my other calculator project [here](https://github.com/developess/calculator)
+
+I'm proud to say I learnt to code and completed this project with no help other than 
+the knowledge google, treehouse and freeCodeCamp provided me. 
+
+Thanks for reading!
+
+![nerd emoji][nerd emoji]
+
+[nerd emoji]:http://cdn.shopify.com/s/files/1/1061/1924/products/Nerd_with_Glasses_Emoji_2a8485bc-f136-4156-9af6-297d8522d8d1_grande.png?v=1483276509
